# conquistadores.org

./: .dockerignore  .env.template  .gitignore  Dockerfile  dev.Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
compose/: entrypoint  start
conquistadores/: manage.py
conquistadores/apps/events/: admin.py  models.py
conquistadores/apps/events/migrations/: 0001_initial.py  0002_remove_events_type_events_type.py  0002_specialevents.py  0003_alter_events_options.py  0004_remove_events_raid_id_alter_events_options_and_more.py  0005_events_event_id.py  0006_events_discord_channel_id.py
conquistadores/apps/guild/: admin.py  apps.py  models.py
conquistadores/apps/guild/migrations/: 0001_initial.py  0002_guild_image_guild_image_height_guild_image_ppoi_and_more.py  0003_alter_guild_image.py  0004_alter_recruitment_options_remove_recruitment_cta.py  0005_alter_wowclass_options_alter_rules_commitment_and_more.py  0006_remove_lootsystem_council.py  0007_guild_raid_times.py  0008_alter_guild_options_alter_lootsystem_options_and_more.py  (+2 more)
conquistadores/apps/landing/: admin.py  models.py  urls.py  views.py
conquistadores/config/: urls.py
conquistadores/config/settings/: base.py  dev.py  prod.py  production.py
conquistadores/conquistadores/: asgi.py  settings.py  urls.py  wsgi.py
conquistadores/helpers/: mixins.py  models.py  utils.py
conquistadores/static/css/: conquistadores.css
conquistadores/static/js/: conquistadores.js
conquistadores/templates/: base.html
conquistadores/templates/landing/: index.html
(+26 files in other folders)
