[project]
name = "conquistadores-org"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.3",
    "django-htmx>=1.23.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 79
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]
ignore = []

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
