[project]
name = "conquistadores-org"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.3",
    "django-apscheduler>=0.7.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-htmx>=1.23.0",
    "django-imagefield>=0.22.0",
    "django-jazzmin>=3.0.1",
    "httpx>=0.28.1",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
    "werkzeug>=3.1.3",
]

[tool.ruff]
line-length = 79
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]
ignore = []

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
